--- a/losPollosHermanoMain.css
+++ b/losPollosHermanoMain.css
@@ -23,7 +23,7 @@ a{
     to{opacity: 1;}
 }
 #logo {
-  width: 50px;
+  width: 100px;
 }
 .header {
   display: flex;
@@ -48,6 +48,9 @@ a{
 .nav a:hover,
 .userNav a:hover {
     color:#f2e205;
+}
+#Set-a-location ion-icon{
+    color: #f2e205;
 }
 #Searchbar{
     border-radius: 20px;
@@ -130,7 +133,7 @@ a{
   width: 100%;
   height: 300px;
   border-radius: 20px;
-  gap: 100px;
+  
   box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
   --border-radius: 20px;
 }
@@ -148,10 +151,11 @@ a{
   display: flex;
   font-size: larger;
   row-gap: 20px;
-  width: 40%;
+  width: 80%;
   height: 5%;
   flex-direction: column;
   justify-content: center;
+  padding:2%;
 }
 .MenuCardInfo h3{
     color:#f20530
@@ -164,10 +168,11 @@ a{
   
 }
 #Image2{
-    transform: translateY(70px);
-    height:500px;
+    transform: translateY(150px);
+    height:650px;
+    /* width:80%; */
     padding-right:0px;
-    padding-left: 20px;
+    /* padding-left: 20px; */
 }
 .btn {
   display: flex;
@@ -180,7 +185,30 @@ a{
   border-radius: 20px;
 }
 .btn:hover{
-    transform: scale(1.2);
+    transform: scale(1.05);
     box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
     transition: .9s;
+}
+footer a{
+    color:hsl(100, 100%, 100%) ;
+    text-decoration: none;
+}
+footer ion-icon{
+    font-size:30px;
+    color:hsl(349, 96%, 28%);
+}
+.footer-container{
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color:hsl(349, 96%, 44%);
+    height:200px;
+}
+.about{
+    display:flex;
+    gap:20px;
+}
+.icon-footer{
+    display:flex;
+    gap:20px;
 }
