--- a/losPollosHermanoMain.css
+++ b/losPollosHermanoMain.css
@@ -60,7 +60,7 @@ a{
     padding:10px
 }
 #Searchbar::placeholder{
-    color:white
+    color:hsl(0, 0%, 70%)
 }
 #Searchbar:focus{
     outline:none;
@@ -68,7 +68,7 @@ a{
     /* background-color: none; */
 
 }
-#UserProf {
+#UserProf, #Cart {
   font-size: 30px;
   color:#f2e205
 }
@@ -125,7 +125,7 @@ a{
   height: 100%;
   padding: 30px;
 }
-.MenuCard {
+.Card {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -137,7 +137,7 @@ a{
   box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
   --border-radius: 20px;
 }
-.MenuCard:nth-of-type(2){
+.Card:nth-of-type(2){
     overflow: hidden;
     display: flex;
     justify-content: flex-end;
@@ -160,7 +160,7 @@ a{
 .MenuCardInfo h3{
     color:#f20530
 }
-.MenuCard img {
+.Card img {
   height: 300px;
   
   border-radius: var(--border-radius);
@@ -188,6 +188,33 @@ a{
     transform: scale(1.05);
     box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
     transition: .9s;
+}
+/* ------------------------------------------End of Explore Section--------------------------------------------------------- */
+/* .Cater{
+background-image:url("LosPollosImages-gif/LPH-Cater.png");
+background-size: 1500px;
+background-position: center;
+
+} */
+.cater-container{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-image:url("LosPollosImages-gif/LPH-Cater.png");
+    background-size: 1500px;
+    background-position: center;
+    height:500px;
+}
+.Catercard{
+    width:40%;
+    padding:3%;
+    flex-direction:column;
+    gap:20px;
+}
+.Catercard h3{
+    color:#f20530}
+.Catercard .btn{
+    width:300px;
 }
 footer a{
     color:hsl(100, 100%, 100%) ;
