--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,13 @@
     background-color: #F20530;
     position: absolute;
     margin-top: 50px;
-    margin-left: 70px;
+    margin-left: 90px;
     width: 450px;
     height: 600px;
     align-content: center;
     text-align: center;
     border-radius: 20px;
-    box-shadow: 5px 10px 18px #888888;
+    box-shadow: 5px 10px 18px #F20530;
 
 }
 
@@ -26,7 +26,7 @@
     width: 250px;
     height: 40px;
     margin: 10px;
-    border: 2px solid #F2E205;
+    border: 2px solid white;
     border-radius: 15px;
     
 }
@@ -35,40 +35,49 @@
     width: 250px;
     height: 40px;
     margin: 10px;
-    border: 2px solid #F2E205;
+    border: 2px solid white;
     border-radius: 15px;
   
 }
 
+
 button {
-    width: 200px;
+    width: 180px;
     height: 30px;
     margin: 10px;
     font-size: 20px;
     text-align: center;
-    background-color: #6c95e7;
+    background-color: #F2E205;
+    border: 1px solid #F2E205;
     border-radius: 15px;
-    border: 2px solid #F2E205;
     color: white;
-    -webkit-text-stroke: #F2E205 1px;
+    font-weight: bolder;
+    
  
 }
 
+.container button:hover {
+    background-color: #6c95e7;
+    color: white;
+    transition: 0.5s;
+}
 .container h1 {
     margin: 30px;
     font-size: 40px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;    
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;    
     color: white;
-    -webkit-text-stroke: #F2E205 1px;
+    -webkit-text-stroke: white 1px;
 }
 
 .container img {
-    width: 150px;
-    height: 120px;
+    width: 200px;
+    height: 180px;
     
 }
 
+
 .video {
   pointer-events: none;
+  
 
 }
