created Nonfunctional Popups

--- a/losPollosHermanoMain.css
+++ b/losPollosHermanoMain.css
@@ -260,6 +260,7 @@ a {
 #takeOut {
   height: 465px;
 }
+/* --------------------------------------------End of Second Cards--------------------------------------------- */
 
 footer a {
   color: hsl(100, 100%, 100%);
