--- a/featured.css
+++ b/featured.css
@@ -44,10 +44,10 @@ h1 {
     height: 450px;
     align-content: center;
     text-align: center;
-    
+    box-shadow: 5px 10px 18px #6c95e7;
    border-radius: 15px;
     
-    background-color: #F2E205;
+    background-color: #6c95e7;
    
 }
 .Fish img {
@@ -67,11 +67,11 @@ h1 {
 }
 
 .Fish h3 {
-    color: #F20530;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #F2E205;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
     text-shadow: 3px 3px 3px black;
-    background-color: #F2E205;
+    background-color: #6c95e7;
     
 }
 
@@ -79,7 +79,7 @@ h1 {
     color: white;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-top: 10px;
-    background-color: #F2E205;
+    background-color: #6c95e7;
    
 }
 .OreoMilkshake {
@@ -91,10 +91,10 @@ h1 {
     height: 450px;
     align-content: center;
     text-align: center;
-    
+    box-shadow: 5px 10px 18px #6c95e7;
     border-radius: 15px;
    
-    background-color: #F2E205;
+    background-color: #6c95e7;
    
 }
 .OreoMilkshake img {
@@ -114,18 +114,18 @@ h1 {
 }
 
 .OreoMilkshake h3 {
-    color: #F20530;
+    color: #F2E205;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 30px;
     text-shadow: 3px 3px 3px black;
-    background-color: #F2E205;
+    background-color: #6c95e7;
 }
 
 .OreoMilkshake p {
     color: white;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-top: 10px;
-    background-color: #F2E205;
+    background-color: #6c95e7;
    
 }
 
@@ -138,8 +138,8 @@ h1 {
     height: 450px;
     align-content: center;
     text-align: center;
-  
-    background-color: #F2E205;
+    box-shadow: 5px 10px 18px #6c95e7;
+    background-color: #6c95e7;
     border-radius: 15px;
    
 }
@@ -161,11 +161,11 @@ h1 {
 }
 
 .SugarCookie h3 {
-    color: #F20530;
+    color: #F2E205;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 30px;
     text-shadow: 3px 3px 3px black;
-    background-color: #F2E205;
+    background-color: #6c95e7;
     
     
 }
@@ -174,6 +174,6 @@ h1 {
     margin-top: 10px;
     color: white;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #F2E205;
+    background-color: #6c95e7;
    
 }
