--- a/style.css
+++ b/style.css
@@ -8,8 +8,13 @@
     box-sizing: border-box;
 }
 
+/* --------------------------------- colors --------------------------------- */
 :root {
---blue: blue;
+--dark-blue: #021F59;
+--teal: #05C7F2;
+--main-red: #F20519;
+--secondary-red: #F20530;
+--main-yellow: #F2E205;
 --light-grey: #666;
 }
 
@@ -20,7 +25,12 @@
     width: 100vh;
     align-items: center; */
     overflow: auto;
-    margin-top: 5%;
+   
+}
+
+body { 
+    height: 100vh;
+    background-color: var(--main-red);
 }
 
 /* -------------------------------------------------------------------------- */
@@ -33,7 +43,7 @@
 .header{
     display: flex;
     flex-direction: row;
-    background-color: #F20530;
+    background-color: #d71d3f;
     flex-wrap: wrap;
     width:100%;
     justify-content: space-around;
@@ -64,20 +74,27 @@
 /* -------------------------------------------------------------------------- */
 /*                                 Nav Styles                                 */
 /* -------------------------------------------------------------------------- */
+
+
+
 .menu-nav { 
+
     display: flex;
     flex-direction: row;
     list-style: none;
-    padding: 0 1.25rem;
-    border-style: 1px solid #333;
+    padding-top: 2rem;   
+    padding-bottom: 2rem;
     place-content: center;
     position: sticky;
+    background-color: white;
    
 
 }
 
 .menu-nav li { 
-    margin-right: 2rem;
+    margin-right: 4rem;
+    font-size: 1.2rem;
+    
 
 }
 
@@ -85,10 +102,38 @@
     cursor: pointer;
 }
 
+.menu-nav::after {
+    content: button; 
+}
+
+.location-button { 
+    font-size: 20px;
+    background-color: transparent;
+    border-style: none;
+    cursor: pointer;
+    margin-left: -20px;
+}
 
 /* -------------------------------------------------------------------------- */
 /*                                 Card Styles                                */
 /* -------------------------------------------------------------------------- */
+
+
+.section-title { 
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-size: 30px;
+    font-family: "Arvo", serif;
+}
+
+
+.title-style { 
+    display: block;
+   transform: translatey(200%);
+  
+}
 
 
 .items-container {
@@ -96,8 +141,10 @@
     flex: 2;
     flex-wrap: wrap;
     justify-content: center;
-    padding-top: 5%;
-    background-color: rgb(155, 35, 35);
+    padding-top: 7%;
+    /* background-color: rgb(155, 35, 35); */
+    background-color: var(--main-red))
+
 
 }
 
@@ -116,9 +163,11 @@
 
 }
 
+
+
 .item-card:hover{
     box-shadow: 0 0 0 0 50px rgba(0, 0, 0, 0.2);
-
+    transform: scale(1.05);
 }
 
 .item-info { 
@@ -131,16 +180,23 @@
 .menu-add {
     margin-top: 2.5em;
     margin-left:3em;
+    font-family: "Arvo", serif;
+    background-color: yellow;
+    border-style:  1px solid black !important;
+
+   
 }
 
 .btn:hover {
     cursor: pointer; 
-    transform: scale(1.05);
+    /* transform: scale(1.05); */
 
 }
 
 .price {
     margin-top: 1em;
+    margin-left: .5em;
+    transform: translateY(-15%);
   
 
 }
@@ -171,7 +227,7 @@
 .btn { 
     padding: 10px;
     border-radius: 6px;
-    border-style: none;
+    /* border-style:  none; */
 
   
 }
