--- a/losPollosHermanoMain.css
+++ b/losPollosHermanoMain.css
@@ -261,6 +261,28 @@ a {
   height: 465px;
 }
 /* --------------------------------------------End of Second Cards--------------------------------------------- */
+.secret{
+    display: flex;
+    
+    margin:0;
+    padding:0;
+    height:200px;
+}
+
+
+#SecretGus{
+    display: flex;
+    position: absolute;
+
+    width:100px;
+
+    bottom: -200px;
+    transition:  bottom 0.5s ease;
+}
+.footer-container:hover #SecretGus{
+    bottom:0
+}
+/* -----------------------------------------------End Of Secret--------------------------------------------------- */
 
 footer a {
   color: hsl(100, 100%, 100%);
@@ -272,10 +294,12 @@ footer ion-icon {
 }
 .footer-container {
   display: flex;
+  overflow: hidden;
   justify-content: space-evenly;
   align-items: center;
   background-color: hsl(349, 96%, 44%);
   height: 200px;
+  position:relative;
 }
 .about {
   display: flex;
