--- a/featured.css
+++ b/featured.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     overflow-x: hidden;
     overflow-y: hidden;
-    background-color: #F20530;
+    background-color: #F20530
     
 }
 
@@ -41,7 +41,7 @@ h1 {
     margin-top: 30px;
     margin-left: 50px;
     width: 350px;
-    height: 450px;
+    height: 500px;
     align-content: center;
     text-align: center;
     box-shadow: 5px 10px 18px #6c95e7;
@@ -63,6 +63,7 @@ h1 {
     transform: scale(1.1);
     transition: 0.5s ease-in-out;
     cursor: pointer;
+     box-shadow: white 5px 5px 5px;
     
 }
 
@@ -77,9 +78,12 @@ h1 {
 
 .Fish p {
     color: white;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 10px;
     background-color: #6c95e7;
+    text-shadow: 2px 2px 2px black;
+    
+    
    
 }
 .OreoMilkshake {
@@ -88,7 +92,7 @@ h1 {
     margin-top: 30px;
     margin-left: 460px;
     width: 350px;
-    height: 450px;
+    height: 500px;
     align-content: center;
     text-align: center;
     box-shadow: 5px 10px 18px #6c95e7;
@@ -111,6 +115,7 @@ h1 {
     transform: scale(1.1);
     transition: 0.5s ease-in-out;
     cursor: pointer;
+    box-shadow: white 5px 5px 5px;
 }
 
 .OreoMilkshake h3 {
@@ -123,9 +128,10 @@ h1 {
 
 .OreoMilkshake p {
     color: white;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 10px;
     background-color: #6c95e7;
+    text-shadow: 2px 2px 2px black;
    
 }
 
@@ -135,7 +141,7 @@ h1 {
     margin-top: 30px;
     margin-left: 870px;
     width: 350px;
-    height: 450px;
+    height: 500px;
     align-content: center;
     text-align: center;
     box-shadow: 5px 10px 18px #6c95e7;
@@ -156,6 +162,7 @@ h1 {
     transform: scale(1.1);
     transition: 0.5s ease-in-out;
     cursor: pointer;
+    box-shadow: white 5px 5px 5px;
     
 
 }
@@ -173,7 +180,17 @@ h1 {
 .SugarCookie p {
     margin-top: 10px;
     color: white;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #6c95e7;
+    text-shadow: 2px 2px 2px black;
+    
+   
+}
+
+h4 {
+    color: white;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #6c95e7;
-   
+    font-size: 30px;
+    text-shadow: 3px 3px 3px black;
 }
