--- a/Pickup-Takeout.css
+++ b/Pickup-Takeout.css
@@ -93,10 +93,29 @@ h3 {
     box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
     transition: 0.9s;
   }
+  .userNav button{
+    background-color: transparent;
+    border:none;
+    color:white;
+    font-family: "Lato", serif;
+    font-weight: 600;
+    font-style: normal;
+  }
   /* -------------------------------------------End Of Header----------------------------------------------- */
+  
+  .modal{
+    display:none;
+    z-index: 1;
+    position:fixed;
+    overflow: scroll;
+    width:100%;
+    height:100%;
+    background-color:hsl(0, 0%, 0%, 0.4)
+  }
   .popup-card{
     display: flex;
     flex-direction: column;
+    margin: 5% auto;
     background-color: hsl(0, 0%, 97%);
     height:500px;
     width:350px;
