--- a/MenuPageStyle.css
+++ b/MenuPageStyle.css
@@ -37,45 +37,75 @@ body {
 /*                                Sticky header                               */
 /* -------------------------------------------------------------------------- */
 
-#logo{
-    width:100px
-}
-.header{
+#logo {
+    width: 100px;
+  }
+  .header {
     display: flex;
     flex-direction: row;
-    background-color: #d71d3f;
+    background-color: #f20530;
     flex-wrap: wrap;
-    width:100%;
+    width: 100%;
     justify-content: space-around;
-}
-.header a{
-    color:white;
+  }
+  .header a {
+    color: white;
     text-decoration: none;
-}
-.userNav,.nav,.logo{
+  }
+  .userNav,
+  .nav,
+  .logo {
     display: flex;
-    width:20%;
     align-items: center;
-    gap:20px
-}
-#UserProf{
-    font-size:30px;
-}
-.btnLink{
-    color:hsl(0, 0%, 0%);
-    background-color: #F2E205;
-    border-radius: 10px;
-    width:100px;
-    height: 40px;
-    padding:2%;
-}
-.userNav button{
+    gap: 40px;
+  }
+  
+  .nav a:hover,
+  .userNav a:hover {
+    color: #f2e205;
+  }
+  #Modalbutton  {
+    color: white;
     background-color: transparent;
-    border:none;
-    color:white;
-    font-family: "Lato", serif;
-    font-weight: 600;
-    font-style: normal;
+    border:none
+  }
+  #Modalbutton ion-icon{
+    color:#F2E205
+  }
+  #Searchbar {
+    border-radius: 20px;
+    background-color: hsl(349, 96%, 45%);
+    border: none;
+    color: white;
+    padding: 10px;
+  }
+  #Searchbar::placeholder {
+    color: hsl(0, 0%, 70%);
+  }
+  #Searchbar:focus {
+    outline: none;
+    border: none;
+    /* background-color: none; */
+  }
+  #UserProf,
+  #Cart {
+    font-size: 30px;
+    color: #f2e205;
+  }
+  #Navbtn {
+    display: flex;
+    color: hsl(100, 100%, 100%);
+    background-color: #f2e205;
+    justify-content: center;
+    border-radius: 10px;
+    width: 120px;
+    padding: 3%;
+  }
+  #Navbtn:hover {
+    color: black;
+    transform: scale(1.2);
+    box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
+    transition: 0.9s;
   }
 
 /* -------------------------------------------------------------------------- */
@@ -262,8 +292,8 @@ body {
     
 }
 .popup-container{
-margin: 6% 37%;
-animation: animateTop 0.8s ;
+    margin: 6.5% 37%;
+    animation: animateTop 0.8s ;
 
 }
 .modal{
@@ -281,6 +311,7 @@ animation: animateTop 0.8s ;
   .popup-card{
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 5% auto;
     background-color: hsl(0, 0%, 97%);
     height:500px;
@@ -332,8 +363,11 @@ animation: animateTop 0.8s ;
     color: hsl(0, 0%, 70%);
   }
   .Update-btn{
+    /* display: flex; */
+
     background-color: #f2e205;
     width:80%;
+
     height: fit-content;
     padding:3%;
     border:none;
