--- a/losPollosHermanoMain.css
+++ b/losPollosHermanoMain.css
@@ -1,3 +1,6 @@
+  /* ---------------------------------------------------- */
+  /* ------               Universal             ----------*/
+  /* ---------------------------------------------------- */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -27,6 +30,10 @@ a {
     opacity: 1;
   }
 }
+  /* ---------------------------------------------------- */
+  /* ------               Header Section       ----------*/
+  /* ---------------------------------------------------- */
+
 #logo {
   width: 100px;
 }
