--- a/receipt.css
+++ b/receipt.css
@@ -6,10 +6,28 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  /* background-color: #f4f4f4; */
-  background-color: #f0af02;
+  /* background-color: var(--background-white); */
+  /* background-color: var(white); */
+  background-image: url("media/lphbackground.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #ede2cd;
   color: #333;
   line-height: 1.6;
+}
+
+:root { 
+--dark-blue: #021F59;
+--teal: #05C7F2;
+--warm-blue: #4aa3e3;
+--main-red: #F20519;
+--secondary-red: #F20530;
+--main-yellow: #F2E205;
+--warm-yellow : #f0af02;
+--light-grey: #666;
+--accent-orange: #ff7043;
+--background-white: #f4f4f4;
+
 }
 
 
@@ -87,8 +105,9 @@ header {
 
 header h1 {
   font-size: 2.5rem;
-  color: #6cabe5;
-  font-weight: 700;
+  color: var(--secondary-red);
+  font-family: "Roboto", serif;
+  font-weight: 800;
 }
 
 header p {
@@ -107,7 +126,7 @@ header p {
 
 .order-status h2 {
   font-size: 1.5rem;
-  color: #6cabe5;
+  color: var(--secondary-red);
   margin-bottom: 15px;
   font-weight: 600;
 }
@@ -137,7 +156,7 @@ header p {
 }
 
 .progress-step.active {
-  background-color: #6cabe5;
+  background-color: var(--warm-yellow);
 }
 
 .progress-step.completed {
@@ -155,14 +174,13 @@ header p {
   left: 100%;
   width: 10px;
   height: 10px;
-  background-color: #6cabe5;
+  color: var(--secondary-red);
   border-radius: 50%;
   transform: translateY(-50%);
 }
 
 .progress-step.active:after {
-  /* background-color: #ff7043; */
-  background-color: #6cabe5;
+  background-color: var(--warm-yellow);
 }
 
 /* Main Content Styles */
@@ -172,7 +190,7 @@ section {
 
 h2 {
   font-size: 1.5rem;
-  color: #6cabe5;
+  color: var(--secondary-red);
   margin-bottom: 10px;
   font-weight: 600;
 }
@@ -229,7 +247,7 @@ footer {
 
 .cta-button {
   padding: 12px 25px;
-  background-color: #6cabe5;
+  background-color: var(--secondary-red);
   color: white;
   text-decoration: none;
   border-radius: 30px;
@@ -239,5 +257,6 @@ footer {
 }
 
 .cta-button:hover {
-  background-color: #4686c3;
+  background-color: #ba0425;
 }
+
