--- a/featured.css
+++ b/featured.css
@@ -3,12 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     overflow-x: hidden;
-    
+    align-items : center;
     background-color: #F20530
     
 }
 body {
-    height: 800px;
+   
+    position: fixed;
+    height: 100%;
+    width: 100%;
 }
 
 h1 {
