--- a/rewards.css
+++ b/rewards.css
@@ -6,6 +6,8 @@
 
 body {
     background-color: #6c95e7;
+    display: flex;
+    justify-content: center;
 
 }
 
@@ -19,109 +21,84 @@ h1 {
     text-shadow: 1px 1px 1px black;
 }
 
+.wrapper {
+    max-width: 1200px;
+    width: 100%;
+    padding: 20px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    
+}
+
+main {
+    text-align: center;
+}
+
+h1 {
+    font-size: 2.5rem;
+    color: #F2E205;
+    text-shadow: 1px 1px 1px black;
+    margin-bottom: 20px;
+}
+
 .logo img {
-    width: 80px;
-    height: 80px;
-    position: absolute;
-    margin-top: -70px;
-    margin-left: 750px;
+    width: 100px;
+    height: 100px;
+    margin-left: 670px;
+    margin-top: -100px
 }
-.reward1 {
+
+.rewards-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
     text-align: center;
 }
 
-
-.reward1 img {
-    width: 800px;
-    height: 300px;
-    margin-top: 50px;
-    
-    border-radius: 20px;
-   
+.reward {
+    max-width: 800px;
+    text-align: center;
+}
+ 
+.reward h2 {
+    font-size: 40px;
+    color: white;
+    text-shadow: 4px 4px 4px black;
+     margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.reward img {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    border-radius: 20px;
+    
+}
 
-.reward1 button {
-    position: absolute;
-    margin-top: 300px;
-    width: 100px;
+.reward button {
+    margin-top: 20px;
+    width: 200px;
     height: 50px;
-    margin-left: -100px;
-    font-size: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 10px;
+    font-size: 1.2rem;
     color: #F20530;
     background-color: #F2E205;
-    border: 1px solid #F2E205;
-    
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-.reward1 button:hover {
-    cursor: pointer;
+.reward button:hover {
     background-color: #F20530;
     color: #F2E205;
 }
 
-.reward1 h2 {
-    
-    position: absolute;
-    margin-left: 310px;
-    margin-top: 170px;
-    font-size: 50px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
-    text-shadow: 7px 7px 7px black;
-    -webkit-text-stroke: 2px black;
-   
-}
-
-#Home {
-    margin-top: 12px;
-    margin-left: 180px;
-  }
-
-.reward2 {
-    text-align: center;
-}
-.reward2 img {
-    width: 800px;
-    height: 300px;
-    margin-top: 50px;
-    
-    border-radius: 20px;
-   
-}
-
-
-.reward2 button {
-    position: absolute;
-    margin-top: 300px;
-    width: 100px;
-    height: 50px;
-    margin-left: -100px;
-    font-size: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #F20530;
-    background-color: #F2E205;
-    border: 1px solid #F2E205;
-    
-}
-
-.reward2 button:hover {
-    cursor: pointer;
-    background-color: #F20530;
-    color: #F2E205;
-}
-
-.reward2 h2 {
-    
-    position: absolute;
-    margin-left: 540px;
-    margin-top: 170px;
-    font-size: 50px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
-    text-shadow: 7px 7px 7px black;
-    -webkit-text-stroke: 2px black;
-   
-}
 
