--- a/FinalCartPage.css
+++ b/FinalCartPage.css
@@ -101,7 +101,7 @@ a {
 .page-container {
   display: flex;
   width: 100%;
-  height: 600px;
+  height: 700px;
   gap: 2%;
 }
 /* -------------------------------- */
@@ -212,6 +212,11 @@ a {
   flex-direction: column;
   width: 100%;
   gap: 25px;
+}
+.nameEmail-Container{
+  display: flex;
+  flex-direction: column;
+  row-gap:20px;
 }
 .tipbtncontainer{
   display: flex;
