Admin Delete and Add Items

--- a/MenuPageStyle.css
+++ b/MenuPageStyle.css
@@ -173,6 +173,35 @@ body {
   margin-left: -20px;
 }
 
+/*.Feature {
+  text-align: center;
+  font-size: 40px;
+  font-family: "Arvo", serif;
+  margin-top: 40px;
+ 
+ 
+ 
+  
+}
+
+.Feature img {
+  width: 9.0em;
+  height: 5.3em; 
+  display: block;
+  margin: 0 auto;
+  
+}
+
+.Feature a {
+ 
+  text-decoration: none;
+  color:#4aa3e3;
+  background-color:#F20519;
+ 
+  
+  
+}
+  */
 /* -------------------------------------------------------------------------- */
 /*                                 Card Styles                                */
 /* -------------------------------------------------------------------------- */
