--- a/featured.css
+++ b/featured.css
@@ -22,12 +22,6 @@ h1 {
     margin-top: 50px;
     text-shadow: 3px 3px 3px black;
 }
-header {
-    
-    
-    
-}
-
 
 
 
@@ -51,6 +45,7 @@ header {
    box-shadow: 5px 10px 18px #6c95e7;
    border-radius: 15px;
    background-color: #6c95e7;
+   border: 5px solid #6c95e7;
    
 }
 .Fish img {
@@ -99,7 +94,7 @@ header {
    margin-bottom: 20px;
     box-shadow: 5px 10px 18px #6c95e7;
     border-radius: 15px;
-   
+    border: 5px solid #6c95e7;
     background-color: #6c95e7;
    
 }
@@ -149,12 +144,13 @@ header {
     box-shadow: 5px 10px 18px #6c95e7;
     background-color: #6c95e7;
     border-radius: 15px;
+    border: 5px solid #6c95e7;
    
 }
 .SugarCookie img {
     width: 100%;
     height: 300px;
-   
+    
     border-radius: 15px;
    
     
