--- a/catering.css
+++ b/catering.css
@@ -47,7 +47,7 @@ body {
 	place-content: center;
 	/* margin-top: 20px;
 	margin-bottom: 20px; */
-	background-image: url('media/Header2.jpg');
+	background-image: url('LosPollosImages-gif/Header2.jpg');
 	background-position: 0 50%;
 	background-size: cover;
 	padding-top: 20px;
