--- a/catering.css
+++ b/catering.css
@@ -43,6 +43,7 @@ body {
 #logo {
 	width: 100px;
 }
+
 .header {
 	display: flex;
 	flex-direction: row;
@@ -113,11 +114,29 @@ body {
 
 /* ----------------------------------- CTA ---------------------------------- */
 .cta {
+	height: 20rem;
+	width: 100%;
+}
+
+.cta-inner {
+	display: table;
+	text-align: center;
+	font-family: 'Arvo', serif;
+}
+
+.cta-inner p {
+	font-size: 5.5rem;
+	font-weight: 800;
+	color: white;
+	-webkit-text-stroke: 3px #f2022f;
+}
+
+.cta {
 	display: flex;
 	place-content: center;
 	/* margin-top: 20px;
 	margin-bottom: 20px; */
-	background-image: url('media/Header2.jpg');
+	background-image: url('media/header.jpg');
 	background-position: 0 50%;
 	background-size: cover;
 	padding-top: 20px;
@@ -130,6 +149,7 @@ body {
 	object-fit: fit;
 	border-radius: 10px;
 }
+
 /* 
 .cta span {
 	font-family: 'Arvo', serif;
@@ -435,6 +455,44 @@ ion-icon {
 .left {
 	width: 30%;
 	background-color: red;
+}
+
+/* ---------------------------------------------------- */
+/* ------               Footer Section       ---------- */
+/* ---------------------------------------------------- */
+footer a {
+	color: hsl(100, 100%, 100%);
+	text-decoration: none;
+}
+footer ion-icon {
+	font-size: 30px;
+	color: hsl(349, 96%, 28%);
+}
+.footer-container {
+	display: flex;
+	overflow: hidden;
+	justify-content: space-evenly;
+	align-items: center;
+	background-color: hsl(349, 96%, 44%);
+	height: 200px;
+	position: relative;
+	margin-top: 5rem;
+}
+.about {
+	display: flex;
+	gap: 20px;
+}
+.icon-footer {
+	display: flex;
+	gap: 20px;
+}
+
+.copyright {
+	display: block;
+	width: 30%;
+	text-wrap: wrap;
+	text-align: center;
+	color: #850e19;
 }
 
 /* -------------------------------------------------------------------------- */
