--- a/menu.css
+++ b/menu.css
@@ -25,10 +25,10 @@ html {
 
 .menu-body {
 	/* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100vh;
-    align-items: center; */
+	flex-direction: column;
+	justify-content: center;
+	width: 100vh;
+	align-items: center; */
 	overflow: auto;
 }
 
@@ -38,7 +38,7 @@ body {
 }
 
 /* -------------------------------------------------------------------------- */
-/*                                Page Navigation                               */
+/*                                Sticky header                               */
 /* -------------------------------------------------------------------------- */
 
 #logo {
@@ -67,16 +67,72 @@ body {
 	align-items: center;
 	gap: 20px;
 }
-#UserProf {
-	font-size: 30px;
+
+.nav a:hover,
+.userNav a:hover {
+	color: #f2e205;
 }
-.btnLink {
-	color: hsl(0, 0%, 0%);
+.Modalbutton {
+	color: white;
+	background-color: transparent;
+	border: none;
+}
+.Modalbutton ion-icon {
+	color: #f2e205;
+}
+#Searchbar {
+	border-radius: 20px;
+	background-color: hsl(349, 96%, 45%);
+	border: none;
+	color: white;
+	padding: 10px;
+}
+#Searchbar::placeholder {
+	color: hsl(0, 0%, 70%);
+}
+#Searchbar:focus {
+	outline: none;
+	border: none;
+	/* background-color: none; */
+}
+#UserProf,
+#Cart {
+	font-size: 30px;
+	color: #f2e205;
+}
+#Navbtn {
+	display: flex;
+	color: hsl(100, 100%, 100%);
 	background-color: #f2e205;
+	justify-content: center;
 	border-radius: 10px;
-	width: 100px;
-	height: 40px;
-	padding: 2%;
+	width: 120px;
+	padding: 3%;
+}
+#Navbtn:hover {
+	color: black;
+	transform: scale(1.2);
+	box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
+	transition: 0.9s;
+}
+
+.cta {
+	display: flex;
+	place-content: center;
+	/* margin-top: 20px;
+	margin-bottom: 20px; */
+	background-image: url('media/Header2.jpg');
+	background-position: 0 50%;
+	background-size: cover;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+.cta img {
+	width: 500px;
+	height: 300px;
+	object-fit: fit;
+	border-radius: 10px;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -143,11 +199,11 @@ body {
 	-webkit-text-stroke-color: black;
 }
 /* 
-.title-style {
-    background-image: url(/media/zigzag.svg);
-    background-position: 0 20%;
-    background-repeat: repeat-x;
-} */
+  .title-style {
+	background-image: url(/media/zigzag.svg);
+	background-position: 0 20%;
+	background-repeat: repeat-x;
+  } */
 
 .title-style {
 	display: block;
@@ -169,12 +225,12 @@ body {
 	justify-content: center;
 	padding-top: 7%;
 	/* background-color: rgb(155, 35, 35); */
-	background-color: var(--warm-yellow);
+	background-color: #fdea41;
 }
 
 .item-card {
 	padding: 10px;
-	width: 20em;
+	width: 30em;
 	height: 10em;
 	margin: 20px;
 	border-radius: 10px;
@@ -235,7 +291,7 @@ body {
 	object-fit: fit;
 }
 
-.item-img img[src^='media/huevosrancheros.png'] {
+.item-img img[src^='LosPollosImages-gif/huevosrancheros.png'] {
 	height: 2px;
 }
 
@@ -272,7 +328,6 @@ body {
 #topBtn:hover {
 	background-color: rgb(154, 8, 8);
 }
-
 /* -------------------------------------------------------------------------- */
 /*                             Breakfast container                            */
 /* -------------------------------------------------------------------------- */
@@ -284,4 +339,99 @@ body {
 	.item-card {
 		width: 150%;
 	}
+}
+/* -------------------------------------------------------------------------- */
+/*                                Modal pop up                              */
+/* -------------------------------------------------------------------------- */
+@keyframes animateTop {
+	from {
+		top: -300px;
+		opacity: 0;
+	}
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+.popup-container {
+	margin: 6.5% 37%;
+	animation: animateTop 0.8s;
+}
+.modal {
+	z-index: 1;
+	display: none;
+	position: fixed;
+	/* overflow: scroll; */
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	height: 100%;
+	background-color: hsl(0, 0%, 0%, 0.4);
+}
+.popup-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 5% auto;
+	background-color: hsl(0, 0%, 97%);
+	height: 500px;
+	width: 350px;
+	padding: 6%;
+	border-radius: 20px;
+	row-gap: 20px;
+}
+.popup-head {
+	display: flex;
+	flex-direction: row;
+	gap: 200px;
+}
+.Closebtn {
+	background-color: transparent;
+	border: none;
+	width: 20px;
+	font-size: 30px;
+}
+.P-D-btns {
+	background-color: transparent;
+	border: none;
+}
+.popup-card button:hover {
+	cursor: pointer;
+}
+.P-D-btns-container {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	padding: 3%;
+	background-color: hsl(0, 0%, 70%);
+	border-radius: 20px;
+}
+.form-container {
+	display: flex;
+	flex-direction: column;
+	row-gap: 20px;
+	/* height:100%; */
+}
+.form-container input,
+.form-container select {
+	border: none;
+	background-color: hsl(0, 0%, 89%);
+	width: 100%;
+	border-radius: 20px;
+	padding: 2%;
+}
+option:value {
+	color: hsl(0, 0%, 70%);
+}
+.Update-btn {
+	/* display: flex; */
+
+	background-color: #f2e205;
+	width: 80%;
+
+	height: fit-content;
+	padding: 3%;
+	border: none;
+	border-radius: 20px;
 }
