--- a/FinalCartPage.css
+++ b/FinalCartPage.css
@@ -152,6 +152,7 @@ button {
 	width: 45%;
 	height: 100%;
 	margin-top: 2%;
+	margin-bottom: 3%;
 	box-shadow: -2px 4px 4px #00000030, -5px 12px 12px #00000015;
 }
 .Final-Cart-Content {
